--- a/package.json
+++ b/package.json
@@ -31,5 +31,12 @@
     "reactify": "^1.1.1",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.6.1"
+  },
+  "dependencies": {
+    "gulp-load-plugins": "^1.1.0",
+    "leaflet": "^0.7.7",
+    "qwest": "^2.2.6",
+    "react": "^0.14.5",
+    "react-dom": "^0.14.5"
   }
 }
