--- a/package.json
+++ b/package.json
@@ -22,18 +22,19 @@
   "devDependencies": {
     "browser-sync": "^2.10.1",
     "browserify": "^12.0.1",
+    "reactify": "^1.1.1",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.6.1",
     "gulp": "^3.9.0",
+    "gulp-load-plugins": "^1.1.0",
+    "gulp-connect": "^3.1.0",
     "gulp-concat": "^2.6.0",
     "gulp-html-replace": "^1.5.5",
     "gulp-react": "^3.1.0",
     "gulp-streamify": "^1.0.2",
-    "gulp-uglify": "^1.5.1",
-    "reactify": "^1.1.1",
-    "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.6.1"
+    "gulp-uglify": "^1.5.1"
   },
   "dependencies": {
-    "gulp-load-plugins": "^1.1.0",
     "leaflet": "^0.7.7",
     "qwest": "^2.2.6",
     "react": "^0.14.5",
