--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   },
   "homepage": "https://github.com/clhenrick/React-Leaflet-demo#readme",
   "devDependencies": {
+    "babel-eslint": "^6.1.2",
     "browser-sync": "^2.10.1",
     "browserify": "^12.0.1",
+    "eslint": "^3.0.1",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
     "gulp-connect": "^3.1.0",
@@ -29,6 +31,7 @@
     "gulp-react": "^3.1.0",
     "gulp-streamify": "^1.0.2",
     "gulp-uglify": "^1.5.1",
+    "gulp-useref": "^3.1.0",
     "reactify": "^1.1.1",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.6.1"
@@ -36,7 +39,7 @@
   "dependencies": {
     "leaflet": "^0.7.7",
     "qwest": "^2.2.6",
-    "react": "^0.14.5",
-    "react-dom": "^0.14.5"
+    "react": "0.14.4",
+    "react-dom": "0.14.4"
   }
 }
