--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
-node_modules/
+# See http://help.github.com/ignore-files/ for more about ignoring files.
+
+# dependencies
+node_modules
+
+# production
+build
+
+# misc
 .DS_Store
-dist/
+npm-debug.log
