--- a/package.json
+++ b/package.json
@@ -1,8 +1,5 @@
 {
-  "name": "React-Leaflet-demo ",
-  "version": "1.0.0",
   "description": "Leaflet React demo",
-  "main": "gulpfile.js",
   "scripts": {
     "test": "n/a"
   },
@@ -11,7 +8,7 @@
     "url": "git+https://github.com/clhenrick/React-Leaflet-demo"
   },
   "keywords": [
-    "react"
+    "react, leaflet"
   ],
   "author": "Chris Henrick",
   "license": "ISC",
@@ -19,27 +16,61 @@
     "url": "https://github.com/clhenrick/React-Leaflet-demo/issues"
   },
   "homepage": "https://github.com/clhenrick/React-Leaflet-demo#readme",
+  "name": "react-leaflet-demo",
+  "version": "0.0.1",
+  "private": true,
   "devDependencies": {
-    "babel-eslint": "^6.1.2",
-    "browser-sync": "^2.10.1",
-    "browserify": "^12.0.1",
-    "eslint": "^3.0.1",
-    "gulp": "^3.9.0",
-    "gulp-concat": "^2.6.0",
-    "gulp-connect": "^3.1.0",
-    "gulp-load-plugins": "^1.1.0",
-    "gulp-react": "^3.1.0",
-    "gulp-streamify": "^1.0.2",
-    "gulp-uglify": "^1.5.1",
-    "gulp-useref": "^3.1.0",
-    "reactify": "^1.1.1",
-    "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.6.1"
+    "autoprefixer": "6.3.7",
+    "babel-core": "6.11.4",
+    "babel-eslint": "6.1.2",
+    "babel-loader": "6.2.4",
+    "babel-plugin-syntax-trailing-function-commas": "6.8.0",
+    "babel-plugin-transform-class-properties": "6.11.5",
+    "babel-plugin-transform-object-rest-spread": "6.8.0",
+    "babel-plugin-transform-react-constant-elements": "6.9.1",
+    "babel-plugin-transform-runtime": "6.12.0",
+    "babel-preset-es2015": "6.9.0",
+    "babel-preset-es2016": "6.11.3",
+    "babel-preset-react": "6.11.1",
+    "babel-runtime": "6.11.6",
+    "case-sensitive-paths-webpack-plugin": "1.1.2",
+    "chalk": "1.1.3",
+    "cross-spawn": "4.0.0",
+    "css-loader": "0.23.1",
+    "eslint": "3.1.1",
+    "eslint-loader": "1.4.1",
+    "eslint-plugin-flowtype": "2.4.0",
+    "eslint-plugin-import": "1.12.0",
+    "eslint-plugin-jsx-a11y": "2.0.1",
+    "eslint-plugin-react": "5.2.2",
+    "extract-text-webpack-plugin": "1.0.1",
+    "file-loader": "0.9.0",
+    "filesize": "3.3.0",
+    "fs-extra": "0.30.0",
+    "gzip-size": "3.0.0",
+    "html-webpack-plugin": "2.22.0",
+    "json-loader": "0.5.4",
+    "opn": "4.0.2",
+    "postcss-loader": "0.9.1",
+    "promise": "7.1.1",
+    "rimraf": "2.5.4",
+    "style-loader": "0.13.1",
+    "url-loader": "0.5.7",
+    "webpack": "1.13.1",
+    "webpack-dev-server": "1.14.1",
+    "whatwg-fetch": "1.0.0"
   },
   "dependencies": {
+    "json-loader": "^0.5.4",
     "leaflet": "^0.7.7",
-    "qwest": "^2.2.6",
-    "react": "0.14.4",
-    "react-dom": "0.14.4"
+    "react": "^15.2.1",
+    "react-dom": "^15.2.1"
+  },
+  "scripts": {
+    "start": "node ./scripts/start.js",
+    "build": "node ./scripts/build.js"
+  },
+  "eslintConfig": {
+    "extends": "./config/eslint.js"
   }
 }
