--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "bugs": {
     "url": "https://github.com/clhenrick/React-Leaflet-demo/issues"
   },
-  "homepage": "https://github.com/clhenrick/React-Leaflet-demo#readme",
+  "homepage": "http://clhenrick.github.io/React-Leaflet-demo",
   "name": "react-leaflet-demo",
   "version": "0.0.1",
   "private": true,
